--- a/css/app_2.css
+++ b/css/app_2.css
@@ -2812,7 +2812,7 @@ html:not(.ie9) .page-loader__spinner {
 
 .contact__form {
   padding: 40px;
-  background-color: #FFD54F;
+  background-color: #3f51b5;
 }
 
 @media (min-width: 768px) {
@@ -2828,7 +2828,7 @@ html:not(.ie9) .page-loader__spinner {
     width: 50%;
     height: 100%;
     top: 0;
-    background-color: #FFD54F;
+    background-color: #3949a0;
     z-index: -1;
   }
 }
@@ -2836,7 +2836,7 @@ html:not(.ie9) .page-loader__spinner {
 .contact__form .btn:hover,
 .contact__form .btn:focus,
 .contact__form .btn {
-  color: #FFB300;
+  color: #3949a0;;
   box-shadow: none;
 }
 
