--- a/public/css/app_1.css
+++ b/public/css/app_1.css
@@ -467,7 +467,7 @@ img {
 .img-responsive,
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  display: block;
+  display: inline;
   max-width: 100%;
   height: auto;
 }
