--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -1,4 +1,4 @@
-/* body{
+ body{
     background-color: #9CD3F9 !important
 } */
 #maincontain {
@@ -241,4 +241,4 @@
 .btn-large {
   font-size: 16px;
   padding: 8px 16px;
-} */
+} 
