--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -1,244 +1,415 @@
- body{
-    background-color: #9CD3F9 !important
-} */
-#maincontain {
-  /*background-color: #d3b0bc; */
-  background-color: #000;
-  position: relative;
-   z-index: 98; 
-  height: 300px;
-  width: 100%;
-}
-
-/* PARALLAX */
-
-.keyart, .keyart_layer {
-  height: 60rem;
-}
-
-#parallax {
-  display: none;
-}
-
-#nonparallax {
-  display: block;
-}
-
-#nonparallax {
-  background-image: url(''); /* mobile image */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-
-.keyart {
-  position: relative;
-  z-index: 10;
-}
-
- .keyart_layer {
-  background-position: bottom center;
-  background-size: auto 1038px;
-   background-repeat: repeat-x; 
-  width: 100%;
-  position: absolute;
-} 
-
-.keyart_layer.parallax {
-  position: fixed;
+.bg-style{
+  /* background: url(img/1.png) no-repeat center center;  */
+  background-color: #308A29;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+  /* max-height:600px; */
+  padding: 0;
+  margin: 0;
 }
 
-#keyart-0 {
-  /* background-image: url('http://i.imgur.com/txKhHme.png');
-  background-color: #9CD3F9; */
-}
 
-#keyart-1 {
-  background-image: url('http://i.imgur.com/qTVCuvY.png');
-}
+/* -------------------------------- 
 
-#keyart-2 {
-  background-image: url('http://i.imgur.com/6H6GtL1.png');
-}
+Primary style
 
-#keyart-3 {
-  background-image: url('http://i.imgur.com/CICw5ld.png');
-}
+-------------------------------- */
 
-#keyart-4 {
-  background-image: url('http://i.imgur.com/ixkLm7b.png');
-}
 
-#keyart-5 {
-  background-image: url('http://i.imgur.com/MnybSr8.png');
-}
-
-#keyart-6 {
-  background-image: url('http://i.imgur.com/jbOO94A.png');
-}
-
-#keyart-7 {
-  background-image: url('img/jbOO94A.png');
-}
-
-#keyart-8 {
-  background-image: url('img/jbOO94A.png');
-}
-
-#keyart-scrim {
-  background-color: #9CD3F9;
-  opacity: 0;
-}
-
-/********************/
-/********************/
-
-/* ENABLES PARALLAX */
-
-/********************/
-/********************/
-
-@media (min-width: 601px) {
-  #nonparallax {
-    display: none;
-  }
-  #parallax {
-    display: block;
-  }
-}
-
-/*********************/
-/*********************/
-
-/* DISABLES PARALLAX */
-
-/*********************/
-/*********************/
-
-@media (max-width: 600px) {
-  #nonparallax {
-    display: block;
-  }
-  #parallax {
-    display: none;
-  }
-}
-
-@media only screen and (max-device-width: 450px) {
-  /* PARALLAX */
-  .keyart, .keyart_layer {
-    height: 550px;
-  }
-
-  .keyart_layer {
-    position: absolute;
-    background-size: auto 600px;
-  }
-}
-
-/* Headline */
-
-#logo-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-}
-/* .alpha-label {
-  color: rgba(255, 255, 255, .8);
-  text-transform: uppercase;
-  font-size: .15em;
-  font-weight: 600;
-  border: 1px solid currentColor;
-  border-radius: 1em;
-  display: inline-block;
-  padding: .3em .75em;
-  line-height: 1;
-  vertical-align: top;
-  position: absolute;
-  font-family: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
-  margin-top: 25px;
-} */
-/* #logo-box h1 {
-  margin-bottom: .1em;
-  font-family: 'Shadows Into Light',
-    cursive,
-    'Avenir Next',
-    Avenir,
-    'Helvetica Neue',
-    Helvetica,
-    Arial,
-    sans-serif;
-  font-weight: 500;
-  font-size: 70px;
-  color: #FFDF00;
-}
-#logo-box h2 {
-  font-size: 22px;
-  font-weight: 300;
-  margin-bottom: 1em;
-  margin-top: -.5em;
-  color: #fff;
-} */
-/* button */
-/* .m-t-1 {
-  margin-top: 1rem;
-} */
-/* .btn {
-  font-family: 'Avenir Next',
-    Avenir,
-    'Helvetica Neue',
-    Helvetica,
-    Arial,
-    sans-serif;
-  display: inline-block;
-  padding: .7em 1.4em;
-  border-radius: 5px;
-  color: #2980b9;
-  line-height: 1.5em;
-  text-decoration: none;
-  font-weight: 500;
-  background-color: transparent;
-  box-shadow: inset 0 0 0 1px #2980b9;
-  cursor: pointer;
-  -webkit-appearance: none;
-  -webkit-font-smoothing: antialiased;
-  -webkit-tap-highlight-color: transparent;
-  border: 0;
-  white-space: nowrap;
-  vertical-align: middle;
-}
-.btn-play {
-  background: rgba(255, 255, 255, .9);
-  border: none;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, .2);
-  color: #2980b9;
-  font-weight: 500;
-  padding-right: 30px;
-  transition: box-shadow .2s ease;
-}
-.btn-play:after {
-  font-family: "Ionicons";
-  content: "\f10b";
-  width: 15px;
-  height: 12px;
-  background-repeat: no-repeat;
-  display: inline-block;
+#cd-timeline {
   position: relative;
-  left: 10px;
-  top: 1px;
-  font-weight: 700;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
+  padding: 2em 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
-.btn-play:hover::after {
-  left: 15px;
+#cd-timeline::before {
+  /* this is the vertical line */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 1.4em;
+  height: 100%;
+  width: 4px;
+  background: #d7e4ed;
 }
-.btn-large {
-  font-size: 16px;
-  padding: 8px 16px;
-} 
+@media only screen and (min-width: 1170px) {
+  #cd-timeline {
+    margin-top: 3em;
+    margin-bottom: 3em;
+  }
+  #cd-timeline::before {
+    left: 50%;
+    margin-left: -2px;
+  }
+}
+
+.cd-timeline-block {
+  position: relative;
+  margin: 2em 0;
+}
+.cd-timeline-block:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.cd-timeline-block:first-child {
+  margin-top: 0;
+}
+.cd-timeline-block:last-child {
+  margin-bottom: 0;
+}
+@media only screen and (min-width: 1170px) {
+  .cd-timeline-block {
+    margin: 4em 0;
+  }
+  .cd-timeline-block:first-child {
+    margin-top: 0;
+  }
+  .cd-timeline-block:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.cd-timeline-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+.cd-timeline-img img {
+  display: block;
+  width: 24px;
+  height: 24px;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  margin-left: -12px;
+  margin-top: -12px;
+}
+.cd-timeline-img.cd-picture {
+  background: #75ce66;
+}
+.cd-timeline-img.cd-movie {
+  background: #c03b44;
+}
+.cd-timeline-img.cd-location {
+  background: #f0ca45;
+}
+@media only screen and (min-width: 1170px) {
+  .cd-timeline-img {
+    width: 60px;
+    height: 60px;
+    left: 50%;
+    margin-left: -30px;
+    /* Force Hardware Acceleration in WebKit */
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+  }
+  .cssanimations .cd-timeline-img.is-hidden {
+    visibility: hidden;
+  }
+  .cssanimations .cd-timeline-img.bounce-in {
+    visibility: visible;
+    -webkit-animation: cd-bounce-1 0.6s;
+    -moz-animation: cd-bounce-1 0.6s;
+    animation: cd-bounce-1 0.6s;
+  }
+}
+
+@-webkit-keyframes cd-bounce-1 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes cd-bounce-1 {
+  0% {
+    opacity: 0;
+    -moz-transform: scale(0.5);
+  }
+
+  60% {
+    opacity: 1;
+    -moz-transform: scale(1.2);
+  }
+
+  100% {
+    -moz-transform: scale(1);
+  }
+}
+@keyframes cd-bounce-1 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.cd-timeline-content {
+  position: relative;
+  margin-left: 60px;
+  background: white;
+  border-radius: 0.25em;
+  padding: 1em;
+  box-shadow: 0 3px 0 #d7e4ed;
+}
+.cd-timeline-content:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.cd-timeline-content h2 {
+  color: #303e49;
+}
+
+.cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
+  display: inline-block;
+}
+.cd-timeline-content p {
+  margin: 1em 0;
+  line-height: 1.6;
+}
+.cd-timeline-content .cd-read-more {
+  float: right;
+  padding: .8em 1em;
+  background: #acb7c0;
+  color: white;
+  border-radius: 0.25em;
+}
+.no-touch .cd-timeline-content .cd-read-more:hover {
+  background-color: #bac4cb;
+}
+.cd-timeline-content .cd-date {
+  float: left;
+  padding: .8em 0;
+  opacity: .7;
+}
+.cd-timeline-content::before {
+  content: '';
+  position: absolute;
+  top: 16px;
+  right: 100%;
+  height: 0;
+  width: 0;
+  border: 7px solid transparent;
+  border-right: 7px solid white;
+}
+@media only screen and (min-width: 768px) {
+  .cd-timeline-content h2 {
+    font-size: 20px;
+    font-size: 1.25rem;
+  }
+  .cd-timeline-content p {
+    font-size: 16px;
+    font-size: 1rem;
+  }
+  .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
+    font-size: 1.5em;
+  }
+}
+@media only screen and (min-width: 1170px) {
+  .cd-timeline-content {
+    margin-left: 0;
+    padding: 1.6em;
+    width: 45%;
+  }
+  .cd-timeline-content::before {
+    top: 24px;
+    left: 100%;
+    border-color: transparent;
+    border-left-color: white;
+  }
+  .cd-timeline-content .cd-read-more {
+    float: left;
+  }
+  .cd-timeline-content .cd-date {
+    position: absolute;
+    width: 100%;
+    left: 122%;
+    top: 6px;
+    font-size: 1.5em;
+  }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content {
+    float: right;
+  }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
+    top: 24px;
+    left: auto;
+    right: 100%;
+    border-color: transparent;
+    border-right-color: white;
+  }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
+    float: right;
+  }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
+    left: auto;
+    right: 122%;
+    text-align: right;
+  }
+  .cssanimations .cd-timeline-content.is-hidden {
+    visibility: hidden;
+  }
+  .cssanimations .cd-timeline-content.bounce-in {
+    visibility: visible;
+    -webkit-animation: cd-bounce-2 0.6s;
+    -moz-animation: cd-bounce-2 0.6s;
+    animation: cd-bounce-2 0.6s;
+  }
+}
+
+@media only screen and (min-width: 1170px) {
+  /* inverse bounce effect on even content blocks */
+  .cssanimations .cd-timeline-block:nth-child(even) .cd-timeline-content.bounce-in {
+    -webkit-animation: cd-bounce-2-inverse 0.6s;
+    -moz-animation: cd-bounce-2-inverse 0.6s;
+    animation: cd-bounce-2-inverse 0.6s;
+  }
+}
+@-webkit-keyframes cd-bounce-2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100px);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(20px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+  }
+}
+@-moz-keyframes cd-bounce-2 {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(-100px);
+  }
+
+  60% {
+    opacity: 1;
+    -moz-transform: translateX(20px);
+  }
+
+  100% {
+    -moz-transform: translateX(0);
+  }
+}
+@keyframes cd-bounce-2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100px);
+    -moz-transform: translateX(-100px);
+    -ms-transform: translateX(-100px);
+    -o-transform: translateX(-100px);
+    transform: translateX(-100px);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(20px);
+    -moz-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    -o-transform: translateX(20px);
+    transform: translateX(20px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes cd-bounce-2-inverse {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100px);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(-20px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+  }
+}
+@-moz-keyframes cd-bounce-2-inverse {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(100px);
+  }
+
+  60% {
+    opacity: 1;
+    -moz-transform: translateX(-20px);
+  }
+
+  100% {
+    -moz-transform: translateX(0);
+  }
+}
+@keyframes cd-bounce-2-inverse {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100px);
+    -moz-transform: translateX(100px);
+    -ms-transform: translateX(100px);
+    -o-transform: translateX(100px);
+    transform: translateX(100px);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(-20px);
+    -moz-transform: translateX(-20px);
+    -ms-transform: translateX(-20px);
+    -o-transform: translateX(-20px);
+    transform: translateX(-20px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
