--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -10,6 +10,58 @@
   margin: 0;
 }
 
+/* -------------------------------- 
+
+Parallax styling
+
+-------------------------------- */
+
+.aspect {
+  }
+
+.scene > *:nth-child(1) {
+}
+  .scene > *:nth-child(1) button {
+    -webkit-transform: rotate(150deg);
+        -ms-transform: rotate(150deg);
+            transform: rotate(150deg); }
+
+.scene > *:nth-child(2) {
+ }
+  .scene > *:nth-child(2) button {
+    -webkit-transform: rotate(120deg);
+        -ms-transform: rotate(120deg);
+            transform: rotate(120deg); }
+
+.scene > *:nth-child(3) {
+}
+  .scene > *:nth-child(3) button {
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg); }
+
+.scene > *:nth-child(4) {
+ }
+  .scene > *:nth-child(4) button {
+    -webkit-transform: rotate(60deg);
+        -ms-transform: rotate(60deg);
+            transform: rotate(60deg); }
+
+.scene > *:nth-child(5) {
+  }
+  .scene > *:nth-child(5) button {
+    -webkit-transform: rotate(30deg);
+        -ms-transform: rotate(30deg);
+            transform: rotate(30deg); }
+
+.scene > *:nth-child(6) {
+ }
+  .scene > *:nth-child(6) button {
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg); }
+
+
 
 /* -------------------------------- 
 
