--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -72,7 +72,7 @@ Primary style
 
 #cd-timeline {
   position: relative;
-  padding: 2em 1em;
+  padding: 2em 0;
   margin-top: 2em;
   margin-bottom: 2em;
 }
