--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -343,6 +343,17 @@ Primary style
   }
 }
 
+.card-item{
+  background: #D44B4E;
+    border-radius: 0.25em;
+    padding: 1em;
+    box-shadow: 0 3px 0 #d7e4ed;
+}
+
+.white-text{
+  color: #f5f5f5;
+}
+
 @media only screen and (min-width: 1170px) {
   /* inverse bounce effect on even content blocks */
   .cssanimations .cd-timeline-block:nth-child(even) .cd-timeline-content.bounce-in {
