adding in new changes

--- a/public/src/home/home.css
+++ b/public/src/home/home.css
@@ -1,6 +1,6 @@
 .bg-style{
   /* background: url(img/1.png) no-repeat center center;  */
-  background-color: #308A29;
+  background-color: #D44B4E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
